Implement security with interceptor and jwt tokens, Add connection route
