# microservices/auth-service/spring-server/src/main/resources/api-spec.yaml
@@ -7,12 +7,20 @@ host: localhost:8080
 basePath: /api
 schemes:
   - http
+parameters:
+  token:
+    in: header
+    name: Authorization
+    type: string
+    required: true
 
 paths:
   /connection:
     post:
       description: get jwt token
       operationId: login
+      produces:
+        - application/json
       consumes:
         - application/json
       parameters:
@@ -29,8 +37,12 @@ paths:
             $ref: '#/definitions/Token'
         '401':
           description: unvalid credentials
+        '500':
+          description: token generation failure
 
   /users:
+    parameters:
+      - $ref: '#/parameters/token'
     post:
       description: create a user
       operationId: createUser
@@ -47,6 +59,8 @@ paths:
           description: user created successfully
         '409':
           description: email already used
+        '403':
+          description: forbidden
     get:
       description: get the list of all users
       operationId: getUsers
@@ -59,6 +73,8 @@ paths:
             type: array
             items:
               $ref: '#/definitions/UserDTO'
+        '403':
+          description: forbidden
 
   /users/{userId}:
     parameters:
@@ -66,6 +82,7 @@ paths:
         name: userId
         required: true
         type: string
+      - $ref: '#/parameters/token'
     delete:
       description: delete a user
       operationId: deleteUser
@@ -74,6 +91,8 @@ paths:
           description: user deleted successfully
         '404':
           description: user not found
+        '403':
+          description: forbidden
     patch:
       description: modify the password of a user
       operationId: changePassword
@@ -90,6 +109,8 @@ paths:
           description: password modified successfully
         '404':
           description: user not found
+        '403':
+          description: forbidden
 definitions:
   User:
     type: object
@@ -118,7 +139,7 @@ definitions:
     properties:
       email:
         type: string
-      pwHash:
+      password:
         type: string
   Token:
     type: object
